--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "name": "",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,6 +9,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.9.1"
+    "@astrojs/sitemap": "^2.0.2",
+    "@astrojs/tailwind": "^4.0.0",
+    "@fontsource/roboto": "^5.0.8",
+    "astro": "^2.10.9"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "6.4.0",
+    "eslint": "8.47.0",
+    "prettier": "3.0.2",
+    "prettier-plugin-astro": "0.11.1",
+    "prettier-plugin-tailwindcss": "0.5.3",
+    "tailwindcss": "^3.3.3"
   }
 }
